updates to use object and array functions attempting

--- a/index.html
+++ b/index.html
@@ -40,26 +40,43 @@
         <thead class="thead-dark">
           <tr>
             <th scope="col">Time</th>
-            <th scope="col">Event Details: click and schedule event </th>
-            <th scope="col">Save</th>
+            <th scope="col">Schedule Event</th>
           </tr>
         </thead>
         <!-- My todo: add new elements from list in javascript-->
         <tbody class ="timeList">
           <tr>
             <td>time appears</td>
-            <td>click to type schedule details</td>
-            <td>save button (click to save)</td>
+            <td>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                </div>
+              </div>
+          </td>
           </tr>
           <tr>
             <td>time appears</td>
-            <td>click to type schedule details</td>
-            <td>save button (click to save)</td>
+            <td>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                </div>
+              </div>
+          </td>
           </tr>
           <tr>
             <td>time appears</td>
-            <td>click to type schedule details</td>
-            <td>save button (click to save)</td>
+            <td>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                </div>
+              </div>
+          </td>
           </tr>
         </tbody>
       </table>
