added more functions to attempt array with for loop for creating new elements

--- a/index.html
+++ b/index.html
@@ -39,44 +39,44 @@
       <table class="table table-hover">
         <thead class="thead-dark">
           <tr>
-            <th scope="col">Time</th>
-            <th scope="col">Schedule Event</th>
+            <th scope="col class = "col1">Time</th>
+            <th scope="col class = "col2">Schedule Event</th>
           </tr>
         </thead>
         <!-- My todo: add new elements from list in javascript-->
         <tbody class ="timeList">
           <tr>
-            <td>time appears</td>
-            <td>
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <td>time appears from [i]</td>
+              <td>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                  <button class="btn btn-outline-secondary saveBtn" type="button" id="button-addon2">Save</button>
                 </div>
               </div>
-          </td>
+            </td>
           </tr>
           <tr>
-            <td>time appears</td>
-            <td>
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <td>time appears from [i]</td>
+              <td>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                  <button class="btn btn-outline-secondary saveBtn" type="button" id="button-addon2">Save</button>
                 </div>
               </div>
-          </td>
+            </td>
           </tr>
           <tr>
-            <td>time appears</td>
-            <td>
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <td>time appears from [i]</td>
+              <td>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+                  <button class="btn btn-outline-secondary saveBtn" type="button" id="button-addon2">Save</button>
                 </div>
               </div>
-          </td>
+            </td>
           </tr>
         </tbody>
       </table>
