--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </tr>
         </thead>
         <!-- My todo: add new elements from list in javascript-->
-        <tbody class ="timeList">
+        <tbody id ="timeList">
           <tr>
             <td>time appears from [i]</td>
               <td>
@@ -86,7 +86,7 @@
       <!-- added bootstrap script because it was missing-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script.js"></script>
+    <script src="assets/script2.js"></script>
   </body>
 </html>
 
