upates to reflect time loop and buttons rendering new script file with edits

--- a/index.html
+++ b/index.html
@@ -39,34 +39,12 @@
       <table class="table table-hover">
         <thead class="thead-dark">
           <tr>
-            <th scope="col class = "col1">Time</th>
-            <th scope="col class = "col2">Schedule Event</th>
+            <th scope="col" class = "col1">Time</th>
+            <th scope="col" class = "col2">Schedule Event</th>
           </tr>
         </thead>
         <!-- My todo: add new elements from list in javascript-->
         <tbody id ="timeList">
-          <tr>
-            <td>time appears from [i]</td>
-              <td>
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary saveBtn" type="button" id="button-addon2">Save</button>
-                </div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>time appears from [i]</td>
-              <td>
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Schedule Event Details" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary saveBtn" type="button" id="button-addon2">Save</button>
-                </div>
-              </div>
-            </td>
-          </tr>
           <tr>
             <td>time appears from [i]</td>
               <td>
@@ -86,7 +64,7 @@
       <!-- added bootstrap script because it was missing-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script2.js"></script>
+    <script src="assets/script3.js"></script>
   </body>
 </html>
 
