--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class= "lead"> Past Event: Gray, Future Event: Green Current Event: Red</p>
       <!-- this will use moment to display info -->
       <p id="currentDay" class="lead"></p>
       <p id="currentTime"></p>
